# qlipper

./: .gitignore  README.md  pyproject.toml
mission_configs/: cnst_thrust_demo.json  slyga_case_a.json
nrs/: configuration.py
nrs/sim/: dymamics_mee.py  propulsion.py
nrs/steering/: q_law.py  trivial.py
qlipper/: __init__.py  configuration.py  constants.py  converters.py
qlipper/cli/: postprocess.py  qlipper_run.py
qlipper/postprocess/: __init__.py  dispatch.py  elem_plotters.py  interpolation.py  plot_cart.py  plot_extra.py  plot_mee.py  plotting_utils.py  postprocess_run.py  traj_plotters.py
qlipper/run/: diagnostics.py  events.py  mission_runner.py  prebake.py  recording.py
qlipper/sim/: __init__.py  cr3bp.py  dymamics_mee.py  dynamics_cartesian.py  eclipse.py  ephemeris.py  loss.py  params.py  perturbations.py  propulsion.py
qlipper/steering/: __init__.py  estimation.py  multibody.py  penalty.py  q_law.py  quail.py  trivial.py
qlipper/utils/: converters.py
scripts/: ephemeris_demo.py  lunar_rendezvous.py  mvp_demo.py  postprocess.py
tests/: test_converters.py  test_eclipse.py  test_ephemeris.py
