[build-system]
requires = ["setuptools>=58.0.0", "wheel", "setuptools_scm[toml]>=6.3.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "nrs/_version.py"

[project]
name = "new-romantic-sailor"
description = "Python implementation of the Q-Law for solar sailing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mingde Yin", email = "mdsuper@hotmail.com" }]
dependencies = ["jax", "diffrax", "jax-dataclasses"]
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["nrs"]

[project.urls]
homepage = "https://github.com/itchono/jaxquest"
